# RAG-Chatbot-FastAPI-Agno-NiceGUI

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
src/agent/: agent.py
src/backend/: main.py
src/shared/: config.py  models.py
tests/integration/: test_main.py
